--- a/src/front/ui/style.scss
+++ b/src/front/ui/style.scss
@@ -78,7 +78,6 @@
     .fl-asst-panel-contents {
         flex: 1 1 auto;
         color: var(--fl-text-color);
-        overflow: auto;
         display: flex;
         flex-direction: column;
     }
